<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Splist</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="pickupLocation">Location:</string>
    <string name="pickupTime">Time:</string>
    <string name="pickupDate">Date:</string>
    <string name="pickupButtonText">Alert for Pick-up</string>
    <string name="list_title">List: </string>
    <string name="items_title">New Item</string>
    <string name="share_title">Share</string>
    <string name="share_checkbox">Share?</string>
    <string name="pickupMessageTitle">Pick-Up Message</string>
    <string name="pickupDefaultText">The items that you requested to split should be available to pickup at the date, time, and location specified.</string>
    <string name="sharewithfriends">Share List With Friends</string>
	<string name="typemsg">Tell your friends about this list</string>
	<string name="confirmMessage">Are you sure you want to send this message?</string>
	<string name="cancel">Cancel</string>
	<string name="yes">Yes</string>
	<string name="shareDefaultText">Hey! I am going shopping and wanted to see if you were interested in splitting any of these items? Take a look and let me know. Thanks!</string>
	<string name="defaultLocation">My Place</string>
	<string name="defaultDate">4-7-2013</string>
	<string name="amount_owed">Amount Owed:</string>
	<string name="$">$</string>
	<string name="zero">0.00</string>
	<string name="calculate_title">Calculate</string>
	
</resources>
