<?xml version="1.0" encoding="utf-8"?>
    <AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_x="18dp"
            android:layout_y="58dp"
            android:text="@string/confirmMessage"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/yesB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="62dp"
            android:layout_y="143dp"
            android:text="@string/yes" />

        <Button
            android:id="@+id/cancelB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="161dp"
            android:layout_y="142dp"
            android:text="@string/cancel" />

    </AbsoluteLayout>
