<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText3"
        android:paddingLeft="6dp"
        android:paddingTop="20dp"
        android:text="@string/pickupDate"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText2"
        android:gravity="right"
        android:paddingLeft="6dp"
        android:paddingTop="20dp"
        android:text="@string/pickupTime"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonPickUpAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/pickupButtonText"
        android:onClick="showPickUpDialog" />


    <ListView
        android:id="@+id/pickupTimeListView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonPickUpAlert"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button2" >

    </ListView>

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TextView02"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/TextView02"
        android:onClick="showTimePickerDialog"
        android:text="Add Time" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spinner1"
        android:paddingLeft="6dp"
        android:paddingTop="10dp"
        android:text="@string/pickupLocation"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignTop="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:text="@string/defaultLocation" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/TextView02"
        android:ems="10"
        android:inputType="date"
        android:text="@string/defaultDate" >

        <requestFocus />
    </EditText>

 

</RelativeLayout>