<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orangesmaller50"
    android:orientation="vertical" >   
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:scaleType="center"
        android:layout_alignParentTop="true" 
        android:src="@drawable/orangesmaller50"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginLeft="210dp"
        android:textColor="#FFFFFFFF"
        android:layout_marginTop="40dp"
        android:text="@string/share_checkbox" />

    <EditText
        android:id="@+id/item"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="30dp"
        android:ems="10"
        android:inputType="text"
        android:textColorHint="#FFFFFFFF"
        android:hint="Item Name?" />

    <CheckBox
        android:id="@+id/checkbox_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/item"
        android:layout_toRightOf="@+id/item"
        android:layout_marginLeft="15dp"/>
    
    <TextView
        android:id="@+id/cost_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="35dp"
        android:text="Cost:" />
    
    <EditText
        android:id="@+id/item_cost"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cost_title"
        android:layout_toRightOf="@+id/cost_title"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColorHint="#FFFFFFFF"
        android:hint="Cost?" />
	<Button
	    android:id="@+id/add_item"
	    android:layout_width="120dp"
	    android:layout_height="35dp"
	    android:layout_alignBottom="@+id/item_cost"
	    android:layout_toRightOf="@+id/item_cost"
	    android:layout_marginLeft="35dp"
	    android:onClick="addItemToList"
	    android:background="#8000d4ff"
	    android:text="Add Item" />

    <ListView
        android:id="@+id/item_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/share_with_others"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cost_title" >

    </ListView>
    
	<Button
	    android:id="@+id/share_with_others"
	    android:layout_width="210dp"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:onClick="showShareMessageDialog"
	    android:text="@string/share_title" />
	<Button
	    android:id="@+id/delete_list"
	    android:layout_width="150dp"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:onClick="showDeleteListDialog"
	    android:layout_toRightOf="@+id/share_with_others"
	    android:text="Delete List" />

	<Button
	    android:id="@+id/new_list_button"
	    android:layout_width="30dp"
	    android:layout_height="30dp"
	    android:layout_alignBaseline="@+id/textView1"
	    android:layout_alignBottom="@+id/textView1"
	    android:layout_alignLeft="@+id/textView2"
	    android:background="#8000d4ff"
	    android:onClick="showCreateListDialog"
	    android:text="+" />

	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_marginTop="21dp"
	    android:layout_toLeftOf="@+id/textView3"
	    android:fontFamily="sans-serif-light"
	    android:text="@string/list_title"
	    android:textColor="#FFFFFFFF" />

	<Spinner
	    android:id="@+id/lists"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/item_cost"
	    android:layout_alignParentRight="true"
	    android:layout_alignTop="@+id/new_list_button" />

	<TextView
	    android:id="@+id/textView2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:layout_below="@+id/lists"
	    android:layout_toLeftOf="@+id/lists"
	    android:text="@string/items_title" />

</RelativeLayout>